edited path to images

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 
     <body>
         <div class="top-container">
-            <img class="top-cloud" src="CSS - My Site Images/cloud.png" alt="cloud">
+            <img class="top-cloud" src="images/cloud.png" alt="cloud">
             <h1>I'm<br>Jan Šoch</h1>
             <h2>a <span class="underline">pro</span>grammer.</h2>
-            <img class="bottom-cloud" src="CSS - My Site Images/cloud.png" alt="cloud">
-            <img src="CSS - My Site Images/mountain.png" alt="mountain">
+            <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
+            <img src="images/mountain.png" alt="mountain">
         </div>
 
         <div class="middle-container">
             <div class="profile">
-              <img id="profile-picture" src="CSS - My Site Images/DSC08122.jpg" alt="profile picture">
+              <img id="profile-picture" src="images/DSC08122.jpg" alt="profile picture">
               <h2>Hello.</h2>
               <p id="intro">I'm a frontend developer on ServiceNow platform. Former plant biology researcher. I love adventures 🏔️ and good coffee.</p>
             </div>
